--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "geojson": "^0.5.0",
+    "i18next": "^21.9.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "mapnik": "^4.5.9",
@@ -38,6 +39,7 @@
     "query-string": "^6.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.3",
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "serialize-javascript": "^5.0.1",
