--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^5.2.0",
     "serialize-javascript": "^5.0.1",
     "sharp": "^0.28.3",
+    "translation-check": "^1.0.2",
     "use-throttle": "0.0.3"
   },
   "devDependencies": {
