--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,7 +1,7 @@
 {
     "cityName": "Cities",
-    "projectBlurb": "Colouring Cities is also the prototype for the Colouring Cities Research Programme (CCRP)",
-    "githubURL": "https://github.com/colouring-cities/colouring-london",
+    "projectBlurb": "Colouring Cities is part of the Colouring Cities Research Programme (CCRP)",
+    "githubURL": "https://github.com/colouring-cities/colouring-core",
     "privacyStatement": "Colouring Cities stores your data... [PRIVACY DATA GOES HERE].",
 
     "initialMapPosition": [ 51.5245255, -0.1338422 ],
