Add link to Open Manual (Configurable)
Each project should configure this to point to their page on the open manual. (i.e. https://github.com/colouring-cities/manual/wiki/M3.-COLOURING-BRITAIN)

--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,7 +1,9 @@
 {
     "cityName": "Cities",
     "projectBlurb": "Colouring {City Name} is part Colouring Cities.",
+    
     "githubURL": "https://github.com/colouring-cities/colouring-core",
+    "manualURL": "https://github.com/colouring-cities/manual/wiki/M3.-COLOURING-BRITAIN",
     "privacyStatement": "{Privacy statement goes here}",
 
     "initialMapPosition": [ 51.5245255, -0.1338422 ],
