--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -4,8 +4,8 @@
     "githubURL": "https://github.com/osgeolabUD-org/colouring-colombia",
     "privacyStatement": "",
 
-    "initialMapPosition": [ 51.5245255, -0.1338422 ],
-    "initialZoomLevel": 16,
+    "initialMapPosition": [ 4.598064, -74.076061 ],
+    "initialZoomLevel": 14,
 
     "postcode": "Postcode",
     "energy_rating": ""
