--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,10 +1,10 @@
 {
-    "cityName": "London",
-    "projectBlurb": "Colouring London is also part of Colouring Cities.",
+    "cityName": "Cities",
+    "projectBlurb": "Colouring {City Name} is part Colouring Cities.",
     
-    "githubURL": "https://github.com/colouring-cities/colouring-london",
+    "githubURL": "https://github.com/colouring-cities/colouring-core",
     "manualURL": "https://github.com/colouring-cities/manual/wiki/M3.-COLOURING-BRITAIN",
-    "privacyStatement": "Colouring London stores your data at The Alan Turing Institute in London behind the organisation’s firewall in a secure database using industry standard practices",
+    "privacyStatement": "{Privacy statement goes here}",
 
     "initialMapPosition": [ 51.5245255, -0.1338422 ],
     "initialZoomLevel": 16,
