--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "pg-format": "^1.0.4",
     "pg-promise": "^10.11.1",
     "query-string": "^6.13.1",
+    "rc-slider": "^10.4.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.11.0",
     "react-dom": "^17.0.2",
