--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -10,5 +10,7 @@
     "initialZoomLevel": 16,
 
     "postcode": "Postcode",
-    "energy_rating": "Building Research Establishment Environmental Assessment Method (BREEAM) rating [<a href='https://bregroup.com/products/breeam/how-breeam-works'>More info</a>]"
+    "energy_rating": "Building Research Establishment Environmental Assessment Method (BREEAM) rating [<a href='https://bregroup.com/products/breeam/how-breeam-works'>More info</a>]",
+
+    "bbox": [-61149.622628, 6667754.851372, 37183, 6744803.375884]
 }
