Corrections to welcome text
I thought we'd fixed this already!

--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,6 +1,6 @@
 {
     "cityName": "Cities",
-    "projectBlurb": "Colouring {City Name} is part Colouring Cities.",
+    "projectBlurb": "Colouring {City Name} is part of Colouring Cities.",
     
     "githubURL": "https://github.com/colouring-cities/colouring-core",
     "manualURL": "https://github.com/colouring-cities/manual/wiki/M3.-COLOURING-BRITAIN",
