--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,6 +1,6 @@
 {
     "cityName": "London",
-    "projectBlurb": "Colouring London is part Colouring Cities.",
+    "projectBlurb": "Colouring London is part of Colouring Cities.",
     
     "githubURL": "https://github.com/colouring-cities/colouring-london",
     "manualURL": "https://github.com/colouring-cities/manual/wiki/M3.-COLOURING-BRITAIN",
