Tweak Welcome Text
Make configurable, remove hard coded reference to the Turing.

https://github.com/colouring-cities/colouring-britain/issues/329

--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,5 +1,6 @@
 {
     "cityName": "Cities",
+    "institution": "The Alan Turing Institute",
     "projectBlurb": "Colouring {City Name} is part of Colouring Cities.",
     
     "githubURL": "https://github.com/colouring-cities/colouring-core",
