--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,19 +1,19 @@
 {
-    "cityName": "Iceland",
+    "cityName": "Cities",
     "institution": "The Alan Turing Institute",
-    "projectBlurb": "Colouring Iceland is part of Colouring Cities.",
+    "projectBlurb": "Colouring {City Name} is part of Colouring Cities.",
     
     "githubURL": "https://github.com/colouring-cities/colouring-core",
     "manualURL": "https://github.com/colouring-cities/manual/wiki/COLOURING-BRITAIN",
     "privacyStatement": "{Privacy statement goes here}",
 
-    "initialMapPosition": [ 64.152774, -21.939547 ],
+    "initialMapPosition": [ 51.5245255, -0.1338422 ],
     "initialZoomLevel": 16,
 
     "postcode": "Postcode",
     "energy_rating": "Building Research Establishment Environmental Assessment Method (BREEAM) rating [<a href='https://bregroup.com/products/breeam/how-breeam-works'>More info</a>]",
 
-    "bbox": [-2460660.8146,9367663.5645,-2413422.7311,9399155.6201],
+    "bbox": [-61149.622628, 6667754.851372, 37183, 6744803.375884],
 
     "basemapTileUrl": "https://tile.openstreetmap.org/{z}/{x}/{y}.png",
     "baseAttribution": "Building attribute data is © Colouring Cities contributors. Basemap © <a href=https://www.openstreetmap.org/copyright>OpenStreetMap contributors</a>. Building © MODIFY TO PROVIDE RELEVANT INFO"
