--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
-    "mapnik": "^4.5.9",
+    "@mapnik/mapnik": "^4.7.2",
     "markdown-to-jsx": "^7.4.0",
     "node-fs": "^0.1.7",
     "nodemailer": "^6.4.11",
