update institutions on the front page

--- a/app/src/cc-config.json
+++ b/app/src/cc-config.json
@@ -1,7 +1,7 @@
 {
 
     "cityName": "Britain",
-    "institution": "The Alan Turing Institute",
+    "institution": "Loughborough University, supported by the University of Cambridge",
     "projectBlurb": "Colouring Britain is part of Colouring Cities.",
     
     "githubURL": "https://github.com/colouring-cities/colouring-britain",
