Add postgres variables to .env

--- a/app/.env.example
+++ b/app/.env.example
@@ -4,6 +4,13 @@ APP_COOKIE_SECRET=123456
 # Path to the tilecache directory
 TILECACHE_PATH=/path/to/tilecache
 
+# Postgres database connection variables
+PGHOST=localhost
+PGPORT=5432
+PGUSER=colouring_cities
+PGDATABASE=colouring_cities_db
+PGPASSWORD='123456'
+
 # Necessary for deploying to a URL with a subdirectory http:/domain.com/subdirectory
 SUBDIRECTORY=/
 
